--- a/app/src/main/res/layout/producto_view.xml
+++ b/app/src/main/res/layout/producto_view.xml
@@ -13,33 +13,30 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:layout_weight="3"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/producto_nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quesadillas"
-            />
+            android:text="Quesadillas" />
 
         <TextView
             android:id="@+id/producto_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Descripción del Producto"
-            />
+            android:text="Descripción del Producto" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/producto_precio"
-        android:layout_width="0dp"
+        android:layout_width="29dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:layout_gravity="center"
-        android:text="$ 5.00"
-        />
+        android:layout_weight="1"
+        android:text="$ 5.00" />
 
 </LinearLayout>
